// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect component: fragment attribute should contains keys specified by the storeToPropsFunc parameter 1`] = `
<div>
  world
</div>
`;

exports[`Connect component: should only render the WrappedComponent when go === true 1`] = `
<div>
  hello
</div>
`;

exports[`Connect component: should render false when state.go === false 1`] = `null`;
